[Bug #96619990] - Resolved issue where page heading misaligned in mobile state

--- a/app/stylus/sections/nav.styl
+++ b/app/stylus/sections/nav.styl
@@ -135,6 +135,7 @@
     h1
       font-size: 4vw
       line-height:4vw
+      margin:80px 15px 0 15px
 
     h2
       font-size:2vw
